--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss-animate": "^1.0.7",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
